# jank

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
bazel/: BUILD.bazel  jank.bzl  jank_resource_dir.bzl  merge_archives.bzl
bazel/example/: BUILD.bazel  cpp_interop.jank  cpplib.cpp  cpplib.hpp  embed.cpp  hello.jank  plugin.jank  shared.cpp  shared.hpp
bazel/example/aot/: core.jank
compiler+runtime/: BUILD.bazel
compiler+runtime/include/cpp/jank/: bazel_config.hpp
compiler+runtime/src/cpp/jank/aot/: processor.cpp
compiler+runtime/src/cpp/jank/jit/: processor.cpp
compiler+runtime/src/cpp/jank/runtime/: core.cpp
compiler+runtime/src/cpp/jank/util/: environment.cpp
