load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//bazel:jank_resource_dir.bzl", "jank_resource_dir")
load("//bazel:merge_archives.bzl", "merge_archives")

package(default_visibility = ["//visibility:public"])

# ---------- Runtime resource directory ----------
# Assembled tree of files needed by jank at runtime (JIT headers, .jank
# sources, hermetic clang binary, clang resource dir).

filegroup(
    name = "jank_sources",
    srcs = glob(["src/jank/**/*.jank"]),
)

filegroup(
    name = "jank_runtime_headers",
    srcs = glob([
        "include/cpp/**/*.hpp",
        "include/cpp/**/*.h",
    ]),
)

LLVM_TOOLCHAIN = "@@llvm++http_archive+llvm-toolchain-minimal-22.1.0-darwin-arm64"

# ---------- Precompiled header (PCH) ----------
# The JIT loads this PCH on startup so it knows all jank runtime types.
# Building it as a Bazel action means Bazel tracks its deps and
# invalidates it when headers change — no more stale PCH issues.

genrule(
    name = "incremental_pch",
    srcs = [
        ":jank_runtime_headers",
        ":jank_resource",
    ],
    outs = ["incremental.pch"],
    cmd = """
        RESOURCE="$$(pwd)/$(location :jank_resource)"
        CLANG="$$RESOURCE/bin/clang++"
        SYSROOT=$$(/usr/bin/xcrun --show-sdk-path 2>/dev/null || true)
        SYSROOT_FLAG=""
        if [ -n "$$SYSROOT" ]; then
            SYSROOT_FLAG="-isysroot $$SYSROOT"
        fi
        "$$CLANG" \
            -std=gnu++20 -femulated-tls \
            -DGC_THREADS -DIMMER_HAS_LIBGC=1 -DIMMER_TAGGED_NODE=0 \
            -DHAVE_CXX14=1 -DCPPINTEROP_USE_REPL \
            -DFOLLY_HAVE_JEMALLOC=0 -DFOLLY_HAVE_TCMALLOC=0 \
            -DFOLLY_ASSUME_NO_JEMALLOC=1 -DFOLLY_ASSUME_NO_TCMALLOC=1 \
            -I "$$RESOURCE/include" \
            -I "$$RESOURCE/include/c++/v1" \
            -nostdinc++ \
            -resource-dir "$$("$$CLANG" -print-resource-dir)" \
            $$SYSROOT_FLAG \
            -Xclang -fincremental-extensions \
            -Xclang -emit-pch \
            -Xclang -fmodules-embed-all-files \
            -fno-modules-validate-system-headers \
            -fpch-instantiate-templates \
            -Xclang -fno-validate-pch \
            -Xclang -fno-pch-timestamp \
            -x c++-header \
            -w \
            -o $@ \
            -c "$$RESOURCE/include/jank/prelude.hpp"
    """,
    visibility = ["//visibility:public"],
)

jank_resource_dir(
    name = "jank_resource",
    jank_sources = [":jank_sources"],
    jank_headers = [":jank_runtime_headers"],
    third_party_headers = [
        "@bdwgc//:hdrs",
        "@nanobench//:hdrs",
        "@folly//:hdrs",
        "@immer//:hdrs",
        "@ftxui//:hdrs",
        "@cpptrace//:hdrs",
        "@cppinterop//:hdrs",
        "@cppinterop//:lib_hdrs",
        "@boost-preprocessor//:hdrs",
        "@boost-multiprecision//:hdrs",
    ],
    third_party_header_strips = [
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "lib/",
        "",
        "",
    ],
    third_party_header_prefixes = [
        "",        # bdwgc: include/gc.h → include/gc.h
        "",        # nanobench: include/nanobench.h → include/nanobench.h
        "include", # folly: folly/*.h → include/folly/*.h
        "include", # immer: immer/**/*.hpp → include/immer/**/*.hpp
        "",        # ftxui: include/ftxui → include/ftxui
        "",        # cpptrace: include/cpptrace → include/cpptrace
        "",        # cppinterop: include/CppInterOp → include/CppInterOp
        "include", # cppinterop/lib: CppInterOp/*.h → include/CppInterOp/*.h
        "",        # boost-preprocessor: include/boost → include/boost
        "",        # boost-multiprecision: include/boost → include/boost
    ],
    clang_binary = [LLVM_TOOLCHAIN + "//:clang++"],
    sysroot = ["@@llvm++osx+macos_sdk//sysroot:sysroot_source_directory"],
    clang_resource_dir = [LLVM_TOOLCHAIN + "//:builtin_resource_dir_files"],
)

# Full resource dir including static libraries for AOT compilation.
# Separate from jank_resource to avoid a cycle: the static libs depend
# on jank_library targets which themselves need the base jank_resource.
jank_resource_dir(
    name = "jank_aot_resource",
    jank_sources = [":jank_sources"],
    jank_headers = [":jank_runtime_headers"],
    third_party_headers = [
        "@bdwgc//:hdrs",
        "@nanobench//:hdrs",
        "@folly//:hdrs",
        "@immer//:hdrs",
        "@ftxui//:hdrs",
        "@cpptrace//:hdrs",
        "@cppinterop//:hdrs",
        "@cppinterop//:lib_hdrs",
        "@boost-preprocessor//:hdrs",
        "@boost-multiprecision//:hdrs",
    ],
    third_party_header_strips = [
        "",
        "",
        "",
        "",
        "",
        "",
        "",
        "lib/",
        "",
        "",
    ],
    third_party_header_prefixes = [
        "",
        "",
        "include",
        "include",
        "",
        "",
        "",
        "include",
        "",
        "",
    ],
    clang_binary = [LLVM_TOOLCHAIN + "//:clang++"],
    sysroot = ["@@llvm++osx+macos_sdk//sysroot:sysroot_source_directory"],
    clang_resource_dir = [LLVM_TOOLCHAIN + "//:builtin_resource_dir_files"],
    static_libs = [
        ":libjank-standalone",
        ":libLLVM",
        ":libclang-cpp",
        ":libcrypto",
        ":libz",
        ":libzstd",
    ],
)

# ---------- Merged static archives for AOT linking ----------
# The AOT linker (processor.cpp) links against these by name.

merge_archives(
    name = "libjank-standalone",
    output_name = "libjank-standalone.a",
    deps = [
        ":jank_lib",
        "@cppinterop",
        "@cpptrace",
        "@ftxui//:screen",
        "@ftxui//:dom",
        "@nanobench",
        "@bdwgc//:gc",
        "@bdwgc//:gctba",
        "@folly",
        "@zip",
        # compiler-rt builtins (provides __emutls_get_address for -femulated-tls)
        "@@llvm++llvm_source+compiler-rt//:builtins",
    ],
    # Compiled core modules — the AOT entrypoint calls jank_load_clojure_core() etc.
    extra_objects = [
        ":clojure_core",
        ":clojure_string",
        ":clojure_walk",
    ],
)

merge_archives(
    name = "libLLVM",
    output_name = "libLLVM.a",
    deps = [
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:OrcJIT",
        "@llvm-project//llvm:Target",
        "@llvm-project//llvm:Passes",
        "@llvm-project//llvm:Analysis",
        "@llvm-project//llvm:IRReader",
        "@llvm-project//llvm:Linker",
        "@llvm-project//llvm:Object",
        "@llvm-project//llvm:BinaryFormat",
        "@llvm-project//llvm:CodeGen",
        "@llvm-project//llvm:ExecutionEngine",
        "@llvm-project//llvm:MC",
        "@llvm-project//llvm:BitReader",
        "@llvm-project//llvm:BitWriter",
        "@llvm-project//llvm:TransformUtils",
        "@llvm-project//llvm:IPO",
        "@llvm-project//llvm:AArch64CodeGen",
        "@llvm-project//llvm:X86CodeGen",
        "@llvm-project//llvm:LineEditor",
    ],
)

merge_archives(
    name = "libclang-cpp",
    output_name = "libclang-cpp.a",
    deps = [
        "@llvm-project//clang:ast",
        "@llvm-project//clang:basic",
        "@llvm-project//clang:codegen",
        "@llvm-project//clang:driver",
        "@llvm-project//clang:frontend",
        "@llvm-project//clang:interpreter",
        "@llvm-project//clang:lex",
        "@llvm-project//clang:parse",
        "@llvm-project//clang:sema",
        "@llvm-project//clang:serialization",
    ],
)

merge_archives(
    name = "libcrypto",
    output_name = "libcrypto.a",
    deps = ["@openssl//:crypto"],
)

merge_archives(
    name = "libz",
    output_name = "libz.a",
    deps = ["@zlib"],
)

merge_archives(
    name = "libzstd",
    output_name = "libzstd.a",
    deps = ["@zstd"],
)

# ---------- Compiler flags matching CMake configuration ----------

JANK_AOT_COPTS = [
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wfloat-equal",
    "-Wuninitialized",
    "-Wswitch-enum",
    "-Wnon-virtual-dtor",
    "-Wold-style-cast",
    "-Wno-gnu-case-range",
    "-Wno-c99-designator",
    "-Wno-c2y-extensions",
    "-Wno-gnu-conditional-omitted-operand",
    "-Wno-implicit-fallthrough",
    "-Wno-covered-switch-default",
    "-Wno-invalid-offsetof",
    "-Wno-deprecated-declarations",
    "-Wno-c++23-extensions",
    "-Wno-macro-redefined",
    "-Wno-c23-extensions",
    "-fno-common",
    "-frtti",
    "-fexceptions",
]

JANK_COMMON_COPTS = [
    "-std=gnu++20",
    "-femulated-tls",
]

JANK_DEFINES = [
    "GC_THREADS",
    "IMMER_HAS_LIBGC=1",
    "IMMER_TAGGED_NODE=0",
    "HAVE_CXX14=1",
    "CPPINTEROP_USE_REPL",
    "FOLLY_HAVE_JEMALLOC=0",
    "FOLLY_HAVE_TCMALLOC=0",
    "FOLLY_ASSUME_NO_JEMALLOC=1",
    "FOLLY_ASSUME_NO_TCMALLOC=1",
]

# Force-include the config header containing string defines that cannot be
# passed via -D (values containing spaces get incorrectly tokenized by Bazel).
JANK_CONFIG_COPTS = ["-include", "compiler+runtime/include/cpp/jank/bazel_config.hpp"]

# ---------- libjank.a (core compiler + runtime library) ----------

cc_library(
    name = "jank_lib",
    srcs = [
        "src/cpp/jtl/panic.cpp",
        "src/cpp/jtl/assert.cpp",
        "src/cpp/jtl/string_builder.cpp",
        "src/cpp/jank/c_api.cpp",
        "src/cpp/jank/hash.cpp",
        "src/cpp/jank/util/cli.cpp",
        "src/cpp/jank/util/sha256.cpp",
        "src/cpp/jank/util/environment.cpp",
        "src/cpp/jank/util/scope_exit.cpp",
        "src/cpp/jank/util/escape.cpp",
        "src/cpp/jank/util/clang_format.cpp",
        "src/cpp/jank/util/string.cpp",
        "src/cpp/jank/util/fmt.cpp",
        "src/cpp/jank/util/fmt/print.cpp",
        "src/cpp/jank/util/path.cpp",
        "src/cpp/jank/util/try.cpp",
        "src/cpp/jank/util/clang.cpp",
        "src/cpp/jank/profile/time.cpp",
        "src/cpp/jank/ui/highlight.cpp",
        "src/cpp/jank/error.cpp",
        "src/cpp/jank/error/aot.cpp",
        "src/cpp/jank/error/report.cpp",
        "src/cpp/jank/error/lex.cpp",
        "src/cpp/jank/error/parse.cpp",
        "src/cpp/jank/error/analyze.cpp",
        "src/cpp/jank/error/runtime.cpp",
        "src/cpp/jank/error/system.cpp",
        "src/cpp/jank/error/codegen.cpp",
        "src/cpp/jank/read/source.cpp",
        "src/cpp/jank/read/lex.cpp",
        "src/cpp/jank/read/parse.cpp",
        "src/cpp/jank/read/reparse.cpp",
        "src/cpp/jank/runtime/detail/type.cpp",
        "src/cpp/jank/runtime/core.cpp",
        "src/cpp/jank/runtime/core/equal.cpp",
        "src/cpp/jank/runtime/core/to_string.cpp",
        "src/cpp/jank/runtime/core/seq.cpp",
        "src/cpp/jank/runtime/core/truthy.cpp",
        "src/cpp/jank/runtime/core/munge.cpp",
        "src/cpp/jank/runtime/core/math.cpp",
        "src/cpp/jank/runtime/core/meta.cpp",
        "src/cpp/jank/runtime/core/call.cpp",
        "src/cpp/jank/runtime/sequence_range.cpp",
        "src/cpp/jank/runtime/perf.cpp",
        "src/cpp/jank/runtime/module/loader.cpp",
        "src/cpp/jank/runtime/object.cpp",
        "src/cpp/jank/runtime/detail/native_array_map.cpp",
        "src/cpp/jank/runtime/context.cpp",
        "src/cpp/jank/runtime/ns.cpp",
        "src/cpp/jank/runtime/var.cpp",
        "src/cpp/jank/runtime/obj/nil.cpp",
        "src/cpp/jank/runtime/obj/number.cpp",
        "src/cpp/jank/runtime/obj/native_function_wrapper.cpp",
        "src/cpp/jank/runtime/obj/jit_function.cpp",
        "src/cpp/jank/runtime/obj/jit_closure.cpp",
        "src/cpp/jank/runtime/obj/deferred_cpp_function.cpp",
        "src/cpp/jank/runtime/obj/multi_function.cpp",
        "src/cpp/jank/runtime/obj/native_pointer_wrapper.cpp",
        "src/cpp/jank/runtime/obj/symbol.cpp",
        "src/cpp/jank/runtime/obj/keyword.cpp",
        "src/cpp/jank/runtime/obj/tagged_literal.cpp",
        "src/cpp/jank/runtime/obj/re_pattern.cpp",
        "src/cpp/jank/runtime/obj/re_matcher.cpp",
        "src/cpp/jank/runtime/obj/uuid.cpp",
        "src/cpp/jank/runtime/obj/inst.cpp",
        "src/cpp/jank/runtime/obj/opaque_box.cpp",
        "src/cpp/jank/runtime/obj/character.cpp",
        "src/cpp/jank/runtime/obj/big_integer.cpp",
        "src/cpp/jank/runtime/obj/big_decimal.cpp",
        "src/cpp/jank/runtime/obj/persistent_list.cpp",
        "src/cpp/jank/runtime/obj/persistent_vector.cpp",
        "src/cpp/jank/runtime/obj/persistent_vector_sequence.cpp",
        "src/cpp/jank/runtime/obj/persistent_array_map.cpp",
        "src/cpp/jank/runtime/obj/transient_array_map.cpp",
        "src/cpp/jank/runtime/obj/persistent_hash_map.cpp",
        "src/cpp/jank/runtime/obj/transient_hash_map.cpp",
        "src/cpp/jank/runtime/obj/persistent_sorted_map.cpp",
        "src/cpp/jank/runtime/obj/transient_sorted_map.cpp",
        "src/cpp/jank/runtime/obj/detail/base_persistent_map.cpp",
        "src/cpp/jank/runtime/obj/detail/base_persistent_map_sequence.cpp",
        "src/cpp/jank/runtime/obj/transient_vector.cpp",
        "src/cpp/jank/runtime/obj/persistent_hash_set.cpp",
        "src/cpp/jank/runtime/obj/transient_hash_set.cpp",
        "src/cpp/jank/runtime/obj/persistent_sorted_set.cpp",
        "src/cpp/jank/runtime/obj/transient_sorted_set.cpp",
        "src/cpp/jank/runtime/obj/persistent_string.cpp",
        "src/cpp/jank/runtime/obj/persistent_string_sequence.cpp",
        "src/cpp/jank/runtime/obj/cons.cpp",
        "src/cpp/jank/runtime/obj/range.cpp",
        "src/cpp/jank/runtime/obj/integer_range.cpp",
        "src/cpp/jank/runtime/obj/repeat.cpp",
        "src/cpp/jank/runtime/obj/ratio.cpp",
        "src/cpp/jank/runtime/obj/iterator.cpp",
        "src/cpp/jank/runtime/obj/lazy_sequence.cpp",
        "src/cpp/jank/runtime/obj/chunk_buffer.cpp",
        "src/cpp/jank/runtime/obj/array_chunk.cpp",
        "src/cpp/jank/runtime/obj/chunked_cons.cpp",
        "src/cpp/jank/runtime/obj/detail/iterator_sequence.cpp",
        "src/cpp/jank/runtime/obj/native_array_sequence.cpp",
        "src/cpp/jank/runtime/obj/native_vector_sequence.cpp",
        "src/cpp/jank/runtime/obj/atom.cpp",
        "src/cpp/jank/runtime/obj/volatile.cpp",
        "src/cpp/jank/runtime/obj/delay.cpp",
        "src/cpp/jank/runtime/obj/future.cpp",
        "src/cpp/jank/runtime/obj/reduced.cpp",
        "src/cpp/jank/runtime/obj/reader_conditional.cpp",
        "src/cpp/jank/runtime/behavior/metadatable.cpp",
        "src/cpp/jank/analyze/processor.cpp",
        "src/cpp/jank/analyze/expression.cpp",
        "src/cpp/jank/analyze/expr/vector.cpp",
        "src/cpp/jank/analyze/expr/recursion_reference.cpp",
        "src/cpp/jank/analyze/expr/map.cpp",
        "src/cpp/jank/analyze/expr/do.cpp",
        "src/cpp/jank/analyze/expr/var_deref.cpp",
        "src/cpp/jank/analyze/expr/recur.cpp",
        "src/cpp/jank/analyze/expr/named_recursion.cpp",
        "src/cpp/jank/analyze/expr/local_reference.cpp",
        "src/cpp/jank/analyze/expr/def.cpp",
        "src/cpp/jank/analyze/expr/let.cpp",
        "src/cpp/jank/analyze/expr/letfn.cpp",
        "src/cpp/jank/analyze/expr/throw.cpp",
        "src/cpp/jank/analyze/expr/if.cpp",
        "src/cpp/jank/analyze/expr/list.cpp",
        "src/cpp/jank/analyze/expr/primitive_literal.cpp",
        "src/cpp/jank/analyze/expr/call.cpp",
        "src/cpp/jank/analyze/expr/set.cpp",
        "src/cpp/jank/analyze/expr/var_ref.cpp",
        "src/cpp/jank/analyze/expr/function.cpp",
        "src/cpp/jank/analyze/expr/try.cpp",
        "src/cpp/jank/analyze/expr/case.cpp",
        "src/cpp/jank/analyze/expr/cpp_raw.cpp",
        "src/cpp/jank/analyze/expr/cpp_type.cpp",
        "src/cpp/jank/analyze/expr/cpp_value.cpp",
        "src/cpp/jank/analyze/expr/cpp_cast.cpp",
        "src/cpp/jank/analyze/expr/cpp_unsafe_cast.cpp",
        "src/cpp/jank/analyze/expr/cpp_call.cpp",
        "src/cpp/jank/analyze/expr/cpp_constructor_call.cpp",
        "src/cpp/jank/analyze/expr/cpp_member_call.cpp",
        "src/cpp/jank/analyze/expr/cpp_member_access.cpp",
        "src/cpp/jank/analyze/expr/cpp_builtin_operator_call.cpp",
        "src/cpp/jank/analyze/expr/cpp_box.cpp",
        "src/cpp/jank/analyze/expr/cpp_unbox.cpp",
        "src/cpp/jank/analyze/expr/cpp_new.cpp",
        "src/cpp/jank/analyze/expr/cpp_delete.cpp",
        "src/cpp/jank/analyze/local_frame.cpp",
        "src/cpp/jank/analyze/step/force_boxed.cpp",
        "src/cpp/jank/analyze/cpp_util.cpp",
        "src/cpp/jank/analyze/pass/walk.cpp",
        "src/cpp/jank/analyze/pass/optimize.cpp",
        "src/cpp/jank/analyze/pass/strip_source_meta.cpp",
        "src/cpp/jank/evaluate.cpp",
        "src/cpp/jank/codegen/processor.cpp",
        "src/cpp/jank/codegen/llvm_processor.cpp",
        "src/cpp/jank/codegen/optimize.cpp",
        "src/cpp/jank/jit/processor.cpp",
        "src/cpp/jank/aot/processor.cpp",
        "src/cpp/jank/aot/resource.cpp",
        # Native module sources
        "src/cpp/clojure/core_native.cpp",
        "src/cpp/clojure/string_native.cpp",
        "src/cpp/jank/compiler_native.cpp",
        "src/cpp/jank/perf_native.cpp",
        "src/cpp/jank/nrepl/server.cpp",
    ],
    hdrs = glob([
        "include/cpp/**/*.hpp",
        "include/cpp/**/*.h",
    ]),
    includes = ["include/cpp"],
    copts = JANK_AOT_COPTS + JANK_COMMON_COPTS + JANK_CONFIG_COPTS,
    defines = JANK_DEFINES,
    # All symbols must be kept for JIT runtime symbol lookup.
    alwayslink = True,
    linkopts = select({
        "@platforms//os:macos": [
            "-Wl,-flat_namespace",
            "-Wl,-undefined",
            "-Wl,suppress",
        ],
        "@platforms//os:linux": [],
    }),
    deps = [
        # Third-party deps
        "@cppinterop",
        "@cpptrace",
        "@ftxui//:screen",
        "@ftxui//:dom",
        "@boost-multiprecision",
        "@boost-preprocessor",
        "@nanobench",
        "@bdwgc//:gc",
        "@bdwgc//:gctba",
        "@folly",
        "@immer",
        "@zip",
        "@stduuid",
        # External deps
        "@boost.asio",
        "@openssl//:crypto",
        "@zlib",
        # LLVM/Clang
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:OrcJIT",
        "@llvm-project//llvm:Target",
        "@llvm-project//llvm:Passes",
        "@llvm-project//llvm:Analysis",
        "@llvm-project//llvm:IRReader",
        "@llvm-project//llvm:Linker",
        "@llvm-project//llvm:Object",
        "@llvm-project//llvm:BinaryFormat",
        "@llvm-project//llvm:CodeGen",
        "@llvm-project//llvm:ExecutionEngine",
        "@llvm-project//llvm:MC",
        "@llvm-project//llvm:BitReader",
        "@llvm-project//llvm:BitWriter",
        "@llvm-project//llvm:TransformUtils",
        "@llvm-project//llvm:IPO",
        "@llvm-project//llvm:AArch64CodeGen",
        "@llvm-project//llvm:X86CodeGen",
        "@llvm-project//clang:ast",
        "@llvm-project//clang:basic",
        "@llvm-project//clang:codegen",
        "@llvm-project//clang:driver",
        "@llvm-project//clang:frontend",
        "@llvm-project//clang:interpreter",
        "@llvm-project//clang:lex",
        "@llvm-project//clang:parse",
        "@llvm-project//clang:sema",
        "@llvm-project//clang:serialization",
    ] + select({
        "@platforms//os:macos": ["@zstd"],
        "//conditions:default": [],
    }),
)

# ---------- jank phase-1 executable ----------

cc_binary(
    name = "jank",
    srcs = [
        "src/cpp/main.cpp",
        "src/cpp/jank/environment/check_health.cpp",
    ],
    includes = ["include/cpp"],
    copts = JANK_AOT_COPTS + JANK_COMMON_COPTS + JANK_CONFIG_COPTS,
    defines = JANK_DEFINES,
    # -export_dynamic keeps all symbols so the JIT can resolve them at runtime.
    linkopts = select({
        "@platforms//os:macos": [
            "-Wl,-flat_namespace",
            "-Wl,-undefined",
            "-Wl,suppress",
            "-Wl,-export_dynamic",
        ],
        "@platforms//os:linux": [
            "-rdynamic",
        ],
    }),
    deps = [
        ":jank_lib",
        "@cppinterop",
        "@openssl//:crypto",
        "@zlib",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:LineEditor",
        "@llvm-project//llvm:Support",
        "@llvm-project//clang:basic",
        "@llvm-project//clang:frontend",
    ],
)

# ---------- jank_library / jank_binary rules ----------

load("//bazel:jank.bzl", "jank_library")

jank_library(
    name = "clojure_core",
    module = "clojure.core",
    srcs = ["src/jank/clojure/core.jank"],
)

jank_library(
    name = "clojure_string",
    module = "clojure.string",
    srcs = ["src/jank/clojure/string.jank"],
    deps = [":clojure_core"],
)

jank_library(
    name = "clojure_walk",
    module = "clojure.walk",
    srcs = ["src/jank/clojure/walk.jank"],
    deps = [":clojure_core"],
)

# ---------- AOT compilation support ----------
# The jank binary resolves JANK_RESOURCE_DIR="jank_resource" relative to
# its own directory.  For AOT we need the resource dir to include static
# libraries.  This wrapper symlinks jank_aot_resource as jank_resource
# next to the real binary, then execs it.

genrule(
    name = "gen_jank_aot_script",
    outs = ["jank_aot.sh"],
    cmd = """cat > $@ << 'SCRIPT'
#!/bin/bash
set -euo pipefail
# Resolve runfiles.
if [[ -n "$${RUNFILES_DIR:-}" ]]; then
  R="$${RUNFILES_DIR}/_main"
elif [[ -d "$${BASH_SOURCE[0]}.runfiles" ]]; then
  R="$${BASH_SOURCE[0]}.runfiles/_main"
else
  echo "error: cannot find runfiles" >&2; exit 1
fi
# jank resolves JANK_RESOURCE_DIR="jank_resource" relative to its own
# canonical directory.  We need the AOT resource dir (which contains
# static libraries) to be at that path.  Create a staging directory
# with a copy of the binary and a symlink to the AOT resource dir.
REAL_JANK="$$(python3 -c "import os,sys;print(os.path.realpath(sys.argv[1]))" "$$R/jank")"
REAL_AOT="$$(python3 -c "import os,sys;print(os.path.realpath(sys.argv[1]))" "$$R/jank_aot_resource")"
STAGE="/tmp/jank-aot-stage"
mkdir -p "$$STAGE"
cp -f "$$REAL_JANK" "$$STAGE/jank" 2>/dev/null || true
chmod +x "$$STAGE/jank"
ln -sfn "$$REAL_AOT" "$$STAGE/jank_resource"
exec "$$STAGE/jank" "$$@"
SCRIPT
""",
)

sh_binary(
    name = "jank_aot",
    srcs = [":gen_jank_aot_script"],
    data = [
        ":jank",
        ":jank_aot_resource",
    ],
)
