load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:jank.bzl", "jank_aot_binary", "jank_binary", "jank_cc_binary")

# --- Pure jank example ---

jank_binary(
    name = "hello",
    main = "bazel/example/hello.jank",
    srcs = ["hello.jank"],
)

# --- jank + C++ interop example ---

cc_library(
    name = "cpplib",
    srcs = ["cpplib.cpp"],
    hdrs = ["cpplib.hpp"],
)

jank_binary(
    name = "cpp_interop",
    main = "bazel/example/cpp_interop.jank",
    srcs = ["cpp_interop.jank"],
    cc_deps = [":cpplib"],
)

# --- AOT native binary example ---

jank_aot_binary(
    name = "aot",
    main = "aot.core",
    srcs = ["aot/core.jank"],
)

# --- C++ embedding example ---
# A C++ host that initializes the jank runtime, loads .jank code, and
# calls jank functions.  shared.hpp is used by both the host and the
# jank script to prove they share the same function.

jank_cc_binary(
    name = "embed",
    srcs = ["embed.cpp", "shared.cpp", "shared.hpp"],
    data = ["plugin.jank"],
    jit_headers = ["shared.hpp"],
    includes = ["."],
)
